--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,64 @@
-.App {
-  text-align: center;
+body {
+  margin: 0;
+  font-family: "Poppins", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-size: 17px;
+  padding: 0;
+  box-sizing: border-box;
+
+  --footerBgColor: #ececec;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+a {
+  text-decoration: none;
+  color: black;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+a:hover {
+  color: black;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+i,
+a,
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+span {
+  padding: 0;
+  margin: 0;
 }
 
-.App-link {
-  color: #61dafb;
+input:focus,
+select:focus,
+textarea:focus {
+  outline: 0px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.row,
+.col-6,
+.col-4 {
+  margin: 0;
+  padding: 0;
 }
+
+/* =======Footer======= */
+.footer {
+  background-color: var(--footerBgColor);
+}
+
+.card-name {
+  width: 5%;
+  margin: 15px;
+}
+
+.card-name img {
+  width: 100%;
+  height: 50px;
+  object-fit: contain;
+}
+/* =======End Footer======= */
